v2.2.1

[Content]
- Added Fluorescent Jelly

[Changes]
- Enchanted and Archiver's bookshelves, along with their infected counterparts, now contribute to enchanting power
- Rebalanced Astute Assembly recipe
- Rebalanced Molecular Metamorpher recipe
- Removed feather recipe -- will be implemented some other way in the future

[Bugfixes]
- Fixed Metamorpher not returning craft remainder items after recipes have concluded
- Fixed Metamorpher active animation continuing to play even when slots contain an invalid recipe

v2.2.0

[Content]
- added Molecular Metamorpher
- added Bottle o' Daydream
- added Bottle o' Nightmare
- added Primordial Assembly
- added Bibliophages
- added Enchanted Bookshelves
- added Archiver's Bookshelves
- added Infected Bookshelves
- added Infected Enchanted Bookshelves
- added Infected Archiver's Bookshelves
- added Forgotten Dust
- added Forgotten Dust Blocks

[Changes]
- changed Accelerator recipe to be less expensive
- Obelisk now displays stored experience in points as a tooltip when hovered over
- merged cognitive flux recipes 

v2.1.0.1 (for 1.19.2)

[Bugfixes]
- Fixed smithing recipes for Cognitive toolset and Precision Dispeller
- Fixed previous changes which were not ported over
 - Set bottle o' enchanting to contain 250mB of cognitium
 - Obelisk item no longer displays fluid information if it does not contain block entity data

v2.1.0

[Content]
- Added Accelerator
- Added Linear Accelerator
- Added Whisperglass

[Changes]
- Set bottle o' enchanting to contain 250mB of cognitium
- Shift-right-clicking in air with the Staff of Attunement will forget the saved obelisk

[Bugfixes]
- Fixed the positions of the widgets in the obelisk GUI not updating when changing the resolution of the minecraft window
- Obelisk item no longer displays fluid information if it does not contain block entity data

v2.0.4

[Content]
- Added custom anvil recipe -- combining an item with dye in an anvil lets you change its name color