@@ -4,15 +4,13 @@ import com.cyanogen.experienceobelisk.block_entities.MolecularMetamorpherEntity;
 import com.cyanogen.experienceobelisk.network.PacketHandler;
 import com.cyanogen.experienceobelisk.network.shared.UpdateRedstone;
 import com.mojang.blaze3d.systems.RenderSystem;
+import com.mojang.blaze3d.vertex.PoseStack;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.Button;
-import net.minecraft.client.gui.components.Renderable;
-import net.minecraft.client.gui.components.Tooltip;
+import net.minecraft.client.gui.components.Widget;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
 
 import java.util.ArrayList;
@@ -49,9 +47,9 @@ public class MolecularMetamorpherOptionsScreen extends Screen{
     }
 
     @Override
-    public void render(GuiGraphics gui, int mouseX, int mouseY, float partialTick) {
+    public void render(PoseStack poseStack, int mouseX, int mouseY, float partialTick) {
 
-        renderBackground(gui);
+        renderBackground(poseStack);
 
         RenderSystem.setShaderColor(1.0f, 1.0f, 1.0f, 1.0f);
         RenderSystem.setShaderTexture(0, texture);
@@ -62,12 +60,12 @@ public class MolecularMetamorpherOptionsScreen extends Screen{
         int y = this.height / 2 - 166 / 2;
 
         //render gui texture
-        gui.blit(texture, x, y, 0, 0, 176, 166, textureWidth, textureHeight);
+        blit(poseStack, x, y, 0, 0, 176, 166, textureWidth, textureHeight);
 
         //descriptors & info
-        gui.drawCenteredString(this.font, Component.translatable("title.experienceobelisk.experience_obelisk.settings"),
+        drawCenteredString(new PoseStack(), this.font, Component.translatable("title.experienceobelisk.experience_obelisk.settings"),
                 this.width / 2,this.height / 2 - 76, 0xFFFFFF);
-        gui.drawString(this.font, Component.translatable("title.experienceobelisk.experience_obelisk.redstone"),
+        drawString(new PoseStack(), this.font, Component.translatable("title.experienceobelisk.experience_obelisk.redstone"),
                 this.width / 2 - 77,this.height / 2 - 56, 0xFFFFFF);
 
         //render widgets
@@ -81,17 +79,16 @@ public class MolecularMetamorpherOptionsScreen extends Screen{
         loadWidgetElements();
 
 
-        for(Renderable widget : this.renderables) {
-            widget.render(gui, mouseX, mouseY, partialTick);
+        for(Widget widget : this.renderables) {
+            widget.render(poseStack, mouseX, mouseY, partialTick);
         }
 
-        super.render(gui, mouseX, mouseY, partialTick);
+        super.render(poseStack, mouseX, mouseY, partialTick);
     }
 
     private void loadWidgetElements(){
         if(!this.buttons.isEmpty()){
             for(Button b : this.buttons){
-                b.setFocused(false);
                 addRenderableWidget(b);
             }
         }
@@ -106,32 +103,24 @@ public class MolecularMetamorpherOptionsScreen extends Screen{
         int h = 20;
         int y1 = 43;
 
-        MutableComponent status;
-        if(metamorpher.isRedstoneEnabled()){
-            status = Component.translatable("button.experienceobelisk.experience_obelisk.enabled");
-        }
-        else{
-            status = Component.translatable("button.experienceobelisk.experience_obelisk.ignored");
-        }
+        Button back = new Button(this.width / 2 + 91, this.height / 2 - 78, 20, 20,
+                Component.translatable("button.experienceobelisk.experience_obelisk.back"),
+                (onPress) ->
+                        Minecraft.getInstance().setScreen(new MolecularMetamorpherScreen(menu, menu.inventory, menu.component)),
+                (button, poseStack, mouseX, mouseY) ->
+                        renderTooltip(poseStack, Component.translatable("tooltip.experienceobelisk.experience_obelisk.back"), mouseX, mouseY)
 
-        Button back = Button.builder(Component.translatable("button.experienceobelisk.experience_obelisk.back"),
-                        (onPress) -> Minecraft.getInstance().setScreen(new MolecularMetamorpherScreen(menu, menu.inventory, menu.component)))
-                .size(20,20)
-                .pos(this.width / 2 + 91, this.height / 2 - 78)
-                .tooltip(Tooltip.create(Component.translatable("tooltip.experienceobelisk.experience_obelisk.back")))
-                .build();
+        );
 
-        Button toggleRedstone = Button.builder(status,
-                        (onPress) -> {
-                            if (!metamorpher.isRedstoneEnabled()) {
-                                PacketHandler.INSTANCE.sendToServer(new UpdateRedstone(pos, true));
-                            } else {
-                                PacketHandler.INSTANCE.sendToServer(new UpdateRedstone(pos, false));
-                            }
-                        })
-                .size(w, h)
-                .pos(this.width / 2 - 25, this.height / 2 - y1)
-                .build();
+        Button toggleRedstone = new Button(this.width / 2 - 25, this.height / 2 - y1, w, h,
+                Component.empty(),
+                (onPress) -> {
+                    if (!metamorpher.isRedstoneEnabled()) {
+                        PacketHandler.INSTANCE.sendToServer(new UpdateRedstone(pos, true));
+                    } else {
+                        PacketHandler.INSTANCE.sendToServer(new UpdateRedstone(pos, false));
+                    }
+        });
 
         buttons.add(back);
         buttons.add(toggleRedstone);
